<resources>

    <!--<string name="facebook_application_id" translatable="false">1785320351486953</string>-->
    <!--<string name="facebook_login_protocol_scheme" translatable="false">fb1785320351486953</string>-->

    <string name="app_name">We Climb Rocks</string>

    <!--General-->
    <string name="bouldering">Bouldering</string>
    <string name="sport">Sport</string>
    <string name="trad">Trad</string>

    <!--MENU-->
    <string name="menu_signin">Sign in / register</string>
    <string name="menu_signout">Sign out</string>
    <string name="menu_about">About</string>
    <string name="clicks_to_dev_menu">Clicks until dev menu shown: %1$d</string>

    <string name="signout_prompt">Are you sure you want to sign out?</string>

    <!--MAP-->
    <string name="map_search_hint">Search for crags and climbs</string>
    <string name="no_topos">There are no topos at this location yet. </string>
    <string name="report_topo_title">Report a topo</string>
    <string name="report_topo_text">Is there something wrong with this topo? Let us know below.</string>

    <!--SUBMIT-->
    <string name="button_submit">Submit</string>
    <string name="button_submit_sector">Submit sector</string>
    <string name="button_submit_topo">Submit topo</string>
    <string name="submission_select_photo_label">Select photo</string>
    <string name="submission_take_photo_label">Take photo</string>
    <string name="submission_text_input_crag_name">Enter the crag name</string>
    <string name="submission_text_input_sector_name">Enter the sector name</string>

    <string name="submission_text_input_topo_name">Topo name</string>
    <string name="submission_text_input_route_name">Route name</string>
    <string name="submission_text_input_route_description">Route description</string>
    <string name="submission_label_route_type">Route type: </string>
    <string name="submission_label_grade">Grade:</string>

    <!--WELCOME-->
    <string name="welcome_title">Select a crag or search</string>
    <string name="welcome_text">Or swipe up to learn more</string>
    <string name="welcome_detail">we-climb.rocks is a new crowd sourced climbing platform. It aims to make finding climbing routes easy and free.
        \n\nYou can create your own climbing topos and share them with the community. Simply sign up, take a photo of the rock face, draw on the routes, fill in some details and upload.</string>
    <string name="welcome_random_crag_button">Explore a random crag</string>
    <string name="welcome_tutorial_button">Tutorial</string>

    <!--Tutorial-->
    <string name="tutorial_continue_button">continue</string>
    <string name="tutorial_exit_button">exit</string>

    <string name="tutorial_title_search">Search</string>
    <string name="tutorial_title_map_crags">Crags</string>
    <string name="tutorial_title_map_sectors">Sectors</string>
    <string name="tutorial_title_locationinfo">Location information</string>
    <string name="tutorial_title_locationinfo_grades">Climb grades</string>
    <string name="tutorial_title_locationinfo_climbtypes">Climb types</string>
    <string name="tutorial_title_topo">View Topos</string>
    <string name="tutorial_title_signin">Signin</string>
    <string name="tutorial_title_fab">Submit Locations</string>
    <string name="tutorial_title_submit">Submit Topos</string>

    <string name="tutorial_subtitle_search">Search for crags, sectors, topos and routes. The search results will have one of the following icons: </string>
    <string name="tutorial_subtitle_map_crags">Explore climbing locations around the world using the map. </string>
    <string name="tutorial_subtitle_map_sectors">See where the rocks are, on a map.</string>
    <string name="tutorial_subtitle_locationinfo">Get a quick summary of the selected location. Tap this section, or drag it up to reveal the topos. </string>
    <string name="tutorial_subtitle_locationinfo_grades">Quickly check grades for the selected location</string>
    <string name="tutorial_subtitle_locationinfo_climbtypes">Quickly check climb types for the selected location</string>
    <string name="tutorial_subtitle_topo">Swipe through routes to highlight them on the topo.</string>
    <string name="tutorial_subtitle_signin">Using the menu indicated here, sign in or create an account to submit your own topos.</string>
    <string name="tutorial_subtitle_fab">Once signed in, a button will appear which allows you to submit locations.</string>
    <string name="tutorial_subtitle_submit">With a sector selected, you can submit your own topo.</string>

    <string name="tutorial_detail_map_crag">This is a crag marker. They show where the general climbing areas are. Click on crag markers to reveal the crags sectors.</string>
    <string name="tutorial_detail_map_sectors">This is a sector marker. They show where the actual rock faces are in a crag.</string>
    <string name="tutorial_detail_locationinfo_grades">These show how many routes of each difficulty at the selected location. Green = easy, orange = medium, red = hard, black = epic.</string>
    <string name="tutorial_detail_locationinfo_types">These icons show how many routes of each climbing discipline at the selected location. Currently we support bouldering, sport and traditional climbing.</string>
    <string name="tutorial_detail_fab_crag">Add a crag to the map</string>
    <string name="tutorial_detail_fab_sector">Add a sector to the selected crag</string>
    <string name="tutorial_detail_fab_topo">Add a topo to the selected sector</string>
</resources>
