<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Wcr_Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        style="@style/Wcr_Container"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/Wcr_MapBottomSheetTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title" />

        <TextView
            style="@style/Wcr_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/Wcr_Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Wcr_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_detail" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>