<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_tutorial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/bg_tutorial">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="5dp"
        style="@style/Wcr_Tutorial_Title"
        android:text="@string/tutorial_title_map_sectors"
        app:layout_constraintBottom_toTopOf="@+id/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Wcr_Tutorial_Text"
        android:text="@string/tutorial_subtitle_map_sectors"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/next_tutorial_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="continueTutorial"
        android:text="@string/tutorial_continue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/exit_button"
        style="@style/Wcr_Tutorial_Exit_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="exitTutorial"
        android:text="@string/tutorial_exit_button"
        app:layout_constraintBottom_toBottomOf="@+id/next_tutorial_button"
        app:layout_constraintEnd_toStartOf="@+id/next_tutorial_button" />

    <TextView
        android:id="@+id/sector_marker_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        style="@style/Wcr_Tutorial_Text"
        android:layout_marginBottom="16dp"
        android:text="@string/tutorial_detail_map_sectors"
        app:layout_constraintBottom_toTopOf="@+id/next_tutorial_button"
        app:layout_constraintEnd_toEndOf="@+id/subtitle"
        app:layout_constraintStart_toEndOf="@+id/sector_marker" />

    <ImageView
        android:id="@+id/sector_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/sector_marker_text"
        app:srcCompat="@drawable/location_marker_sector" />

</androidx.constraintlayout.widget.ConstraintLayout>